--- a/index.html
+++ b/index.html
@@ -3,7 +3,72 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Avatar Studio</title>
+    <title>Avatar Studio | Jackie 設計的智慧頭像工作室</title>
+    <meta
+      name="description"
+      content="Avatar Studio 由 Jackie 設計打造，支援批次匯入、AI 去背、圖像調色與 PNG 打包下載，快速製作一致性的專業頭像。"
+    />
+    <meta
+      name="keywords"
+      content="頭像去背, AI 去背, 圖像編輯, Avatar Studio, 批次處理, jackirdesign"
+    />
+    <meta name="author" content="Jackie 設計" />
+    <meta name="robots" content="index,follow" />
+    <meta name="format-detection" content="telephone=no" />
+    <link rel="canonical" href="https://jackirdesign.tw/avatar-studio" />
+    <meta name="theme-color" content="#0f172a" />
+
+    <meta property="og:locale" content="zh_TW" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Avatar Studio | Jackie 設計的智慧頭像工作室" />
+    <meta
+      property="og:description"
+      content="批量處理頭像、AI 去背與調色，一次完成高品質輸出。立即在 Avatar Studio 線上體驗。"
+    />
+    <meta property="og:url" content="https://jackirdesign.tw/avatar-studio" />
+    <meta property="og:site_name" content="Jackie 設計" />
+    <meta
+      property="og:image"
+      content="https://jackirdesign.tw/assets/avatar-studio-og.png"
+    />
+    <meta property="og:image:alt" content="Avatar Studio 頭像編輯預覽畫面" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Avatar Studio | Jackie 設計的智慧頭像工作室" />
+    <meta
+      name="twitter:description"
+      content="批量處理頭像、AI 去背與調色，一次完成高品質輸出。立即在 Avatar Studio 線上體驗。"
+    />
+    <meta
+      name="twitter:image"
+      content="https://jackirdesign.tw/assets/avatar-studio-og.png"
+    />
+
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "Avatar Studio",
+        "url": "https://jackirdesign.tw/avatar-studio",
+        "description": "Avatar Studio 由 Jackie 設計打造，支援批次匯入、AI 去背、圖像調色與 PNG 打包下載，快速製作一致性的專業頭像。",
+        "inLanguage": "zh-TW",
+        "applicationCategory": "PhotoEditingSoftware",
+        "operatingSystem": "Web",
+        "creator": {
+          "@type": "Person",
+          "name": "Jackie"
+        },
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "TWD"
+        }
+      }
+    </script>
   </head>
   <body class="bg-slate-925 text-slate-100">
     <div id="root"></div>
