--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="author" content="Jackie 設計" />
     <meta name="robots" content="index,follow" />
     <meta name="format-detection" content="telephone=no" />
-    <link rel="canonical" href="https://jackirdesign.tw/avatar-studio" />
+    <!-- <link rel="canonical" href="https://jackirdesign.tw/avatar-studio" /> -->
     <meta name="theme-color" content="#0f172a" />
 
     <meta property="og:locale" content="zh_TW" />
@@ -25,12 +25,12 @@
       property="og:description"
       content="批量處理頭像、AI 去背與調色，一次完成高品質輸出。立即在 Avatar Studio 線上體驗。"
     />
-    <meta property="og:url" content="https://jackirdesign.tw/avatar-studio" />
+    <meta property="og:url" content="https://avatar-kit.vercel.app" />
     <meta property="og:site_name" content="Jackie 設計" />
-    <meta
+    <!-- <meta
       property="og:image"
       content="https://jackirdesign.tw/assets/avatar-studio-og.png"
-    />
+    /> -->
     <meta property="og:image:alt" content="Avatar Studio 頭像編輯預覽畫面" />
 
     <meta name="twitter:card" content="summary_large_image" />
@@ -39,10 +39,10 @@
       name="twitter:description"
       content="批量處理頭像、AI 去背與調色，一次完成高品質輸出。立即在 Avatar Studio 線上體驗。"
     />
-    <meta
+    <!-- <meta
       name="twitter:image"
       content="https://jackirdesign.tw/assets/avatar-studio-og.png"
-    />
+    /> -->
 
     <link rel="icon" href="/favicon.ico" sizes="any" />
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
@@ -53,7 +53,7 @@
         "@context": "https://schema.org",
         "@type": "WebApplication",
         "name": "Avatar Studio",
-        "url": "https://jackirdesign.tw/avatar-studio",
+        "url": "https://avatar-kit.vercel.app",
         "description": "Avatar Studio 由 Jackie 設計打造，支援批次匯入、AI 去背、圖像調色與 PNG 打包下載，快速製作一致性的專業頭像。",
         "inLanguage": "zh-TW",
         "applicationCategory": "PhotoEditingSoftware",
