--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <meta
       name="keywords"
-      content="頭像去背, AI 去背, 圖像編輯, Avatar Studio, 批次處理, jackirdesign"
+      content="頭像去背, AI 去背, 圖像編輯, Avatar Studio, 批次處理, jackie design"
     />
     <meta name="author" content="Jackie 設計" />
     <meta name="robots" content="index,follow" />
